【更新】新增图片 改变样式

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,12 @@
 <!--index.wxml-->
 <view class="container">
-<image class="item" wx:for="{{playList}}" bindtap="onClickHandler" data-id="{{index}}" src="{{item.image}}"></image>
-<video class="item" hidden="{{hidden}}" autoplay style="position: absolute;top: 0;left:0;z-index: 1;transform:translate3d({{clientX}}px,{{clientY}}px,0)" poster="{{current.image}}"  object-fit="cover" src="{{current.video}}"></video>
+  <view class="item"  wx:for="{{playList}}" data-id="{{index}}" bindtap="onClickHandler" style="background-image: url({{item.image}});background-size: cover;background-position: center">
+    <!-- <image class="item" styl  src="{{item.image}}"></image> -->
+    <image class="play" src="./play.png"></image>
+  </view>
+
+  
+  
+   <video class="item" hidden="{{hidden}}" autoplay style="position: absolute;top: 0;left:0;z-index:2;transform:translate3d({{clientX}}px,{{clientY}}px,0)" poster="{{current.image}}" object-fit="cover" src="{{current.video}}"></video>
 
 </view>
